--- a/math3/hw5/main.tex
+++ b/math3/hw5/main.tex
@@ -182,4 +182,54 @@ We start with \(\mathbf{x_0} = (1, 1)\)
 Doing the same calculation \(\mathbf{x_2}\) will also be \(\begin{pmatrix}1 \\ 1\end{pmatrix}\). It turns out that i didnt even need to calculate the jacobian
 matrix :)
 
+\section*{Exercise 19}
+We are given the functions
+\begin{align*}
+   f(x_1, x_2) &:= \frac{1}{3} x_1^3 + \frac{1}{4} x_2^2 + x_1 + \frac{1}{2} x_2 + 2 , \\
+   g(x_1, x_2) &:= x_1 + \frac{1}{2} x_2.
+\end{align*}
+
+Choose \(h(x_1) = -2x_1\) so that \(g(x_1, h(x_1)) = 0\).
+\begin{align*}
+   f |_M (x_1) &= f(x_1, h(x_1)) \\
+   &= \frac{1}{3} x_1^3 + \frac{1}{4} (-2x_1)^2 + x_1 + \frac{1}{2} (-2x_1) + 2 \\
+   &= \frac{1}{3} x_1^3 + \frac{1}{4} (4x_1^2) + x_1 - x_1 + 2 \\
+   &= \frac{1}{3} x_1^3 + x_1^2 + 2 \\
+\end{align*}
+
+Now we need to find the extremum points of \(f |_M\). Lets continue with derivaties
+\begin{align*}
+   f |_M' (x_1) &= x_1^2 + 2x_1 \\
+   f |_M'' (x_1) &= 2x_1 + 2
+\end{align*}
+
+Setting the first derivatie to zero
+\begin{align*}
+   f |_M' (x_1) = 0 &\implies x_1^2 + 2x_1 = 0 \\
+   &\implies x_1 (x_1 + 2) = 0 \\
+   &\implies x_1 = 0 \quad \text{or} \quad x_1 = -2
+\end{align*}
+
+Now we can use the second derivatie test to classify these points
+\begin{itemize}
+   \item For \(x_1 = 0\):
+   \begin{align*}
+      f |_M'' (0) = 2(0) + 2 = 2 > 0
+   \end{align*}
+   So we have a local minimum at \(x_1 = 0\). The corresponding \(x_2\) value is
+   \begin{align*}
+      x_2 = h(0) = -2(0) = 0
+   \end{align*}
+   Thus one local minimum point is \((0, 0)\).
+   \item For \(x_1 = -2\):
+   \begin{align*}
+      f |_M'' (-2) = 2(-2) + 2 = -2 < 0
+   \end{align*}
+   So we have a local maximum at \(x_1 = -2\). The corresponding \(x_2\) value is
+   \begin{align*}
+      x_2 = h(-2) = -2(-2) = 4
+   \end{align*}
+   Thus one local maximum point is \((-2, 4)\).
+\end{itemize}
+
 \end{document}
