--- a/math3/hw6/main.tex
+++ b/math3/hw6/main.tex
@@ -171,4 +171,46 @@ The inverse of jacobian matrix:
    \end{pmatrix} \\
 \end{align*}
 
+\section*{Exercise 22}
+
+\subsection*{(i)}
+We are given the integral
+\begin{align*}
+   \int_A \frac{1}{x_1^3} + \frac{2}{x_2^2} \, d(x_1, x_2)
+\end{align*}
+where \(A = [1, 3] \times [2, 4]\). \\
+The function \(\frac{1}{x_1^3} + \frac{2}{x_2^2}\) is continuos on the set \(A\) because it is obviously a \(C^1\) function which implies continuity. It is
+a \(C^1\) function because all the partial derivatives exist and are continuous. \\
+And continuity of the integrand implies integrability therefore the integral exists. \\
+Since it is integrable we can use the Fubini theorem
+\begin{align*}
+   \int_A \frac{1}{x_1^3} + \frac{2}{x_2^2} \, d(x_1, x_2) &= \int_1^3 \int_2^4 \left( \frac{1}{x_1^3} + \frac{2}{x_2^2} \right) dx_2 dx_1 \\
+   &= \int_1^3 \left( \int_2^4 \frac{1}{x_1^3} dx_2 + \int_2^4 \frac{2}{x_2^2} dx_2 \right) dx_1 \\
+   &= \int_1^3 \left( \frac{1}{x_1^3} (4 - 2) + 2\left( -\frac{1}{x_2} \Big|_{2}^{4} \right) \right) dx_1 \\
+   &= \int_1^3 \left( \frac{2}{x_1^3} + 2\left( -\frac{1}{4} + \frac{1}{2} \right) \right) dx_1 \\
+   &= \int_1^3 \left( \frac{2}{x_1^3} + 2\left( \frac{1}{4} \right) \right) dx_1 \\
+   &= \int_1^3 \left( \frac{2}{x_1^3} + \frac{1}{2} \right) dx_1 \\
+   &= 2\left( -\frac{1}{2x_1^2} \Big|_{1}^{3} \right) + \frac{1}{2}(3 - 1) \\
+   &= 2\left( -\frac{1}{18} + \frac{1}{2} \right) + 1 \\
+   &= 2\left( \frac{9 - 1}{18} \right) + 1 = 2\left( \frac{8}{18} \right) + 1 = \frac{8}{9} + 1 = \frac{17}{9}.
+\end{align*}
+
+\subsection*{(ii)}
+We are given the integral
+\begin{align*}
+   \int_A \cos(x_1) x_2^3 \, d(x_1, x_2)
+\end{align*}
+where \(A = \left[-\frac{\sqrt{\pi}}{2}, \frac{\sqrt{\pi}}{2}\right] \times [-1, 1]\). \\
+The function \(\cos(x_1) x_2^3\) is continuos on the set \(A\) because it is obviously a \(C^1\) function which implies continuity. It is
+a \(C^1\) function because all the partial derivatives exist and are continuous. \\
+And continuity of the integrand implies integrability therefore the integral exists. \\
+Since it is integrable we can use the Fubini theorem
+\begin{align*}
+   \int_A \cos(x_1) x_2^3 \, d(x_1, x_2) &= \int_{-\frac{\sqrt{\pi}}{2}}^{\frac{\sqrt{\pi}}{2}} \int_{-1}^{1} \cos(x_1) x_2^3 \, dx_2 \, dx_1 \\
+   &= \int_{-\frac{\sqrt{\pi}}{2}}^{\frac{\sqrt{\pi}}{2}} \cos(x_1) \left( \int_{-1}^{1} x_2^3 \, dx_2 \right) dx_1 \\
+   &= \int_{-\frac{\sqrt{\pi}}{2}}^{\frac{\sqrt{\pi}}{2}} \cos(x_1) \left( \frac{x_2^4}{4} \Big|_{-1}^{1} \right) dx_1 \\
+   &= \int_{-\frac{\sqrt{\pi}}{2}}^{\frac{\sqrt{\pi}}{2}} \cos(x_1) \left( \frac{1}{4} - \frac{1}{4} \right) dx_1 \\
+   &= \int_{-\frac{\sqrt{\pi}}{2}}^{\frac{\sqrt{\pi}}{2}} \cos(x_1) \cdot 0 \, dx_1 = 0.
+\end{align*}
+
 \end{document}
