--- a/math3/hw7/main.tex
+++ b/math3/hw7/main.tex
@@ -191,5 +191,93 @@ Calculating the probabilities:
    &= \frac{1}{\binom{200}{10}} \sum_{k=0}^{5} \binom{160}{k} \cdot \binom{40}{10 - k}.
 \end{align*}
 
+\section*{Exercise 28}
+We are given the functions
+\begin{align*}
+   p_1(k) &=
+   \begin{cases}
+      -\frac{1}{3}, & k \in \{1, 3\} \\
+      -\frac{1}{6}, & k \in \{2, 5\} \\
+      1, & k \in \{4, 6\}
+   \end{cases}, \\
+   p_2(k) &=
+   \begin{cases}
+      \frac{1}{3}, & k \in \{1, 3\} \\
+      \frac{1}{6}, & k \in \{2, 5\} \\
+      \frac{1}{2}, & k \in \{4, 6\}
+   \end{cases}, \\
+   p_q(k) &=
+   q^k, \quad q \in (0, 1).
+\end{align*}
+
+\subsection*{(i)}
+A probability counting density must satisfy two properties:
+\begin{itemize}
+    \item \(p(k) \geq 0\) for all \(k\in \Omega\)
+    \item \(\sum_{k \in \Omega}^{} p(k) = 1\)
+\end{itemize}
+
+\(p_1\) is not a probability counting density because it assigns negative probabilities to some outcomes. \\
+\(p_2\) is not a probability counting density function because the sum exceeds 1.
+
+\subsection*{(ii)}
+We need to find \(\alpha, \beta \in \mathbb{R}\) such that \(\alpha p_1 + \beta p_2\) is a probability counting density. \\
+So we need to satisfy the two properties:
+\begin{itemize}
+    \item \(\alpha p_1(k) + \beta p_2(k) \geq 0\) for all \(k\in \Omega\)
+    \item \(\sum_{k \in \Omega}^{} \alpha p_1(k) + \beta p_2(k) = 1\)
+\end{itemize}
+
+From the second property we have:
+\begin{align*}
+   \sum_{k \in \Omega}^{} \alpha p_1(k) + \beta p_2(k) &= \alpha \sum_{k \in \Omega}^{} p_1(k) + \beta \sum_{k \in \Omega}^{} p_2(k) \\
+   &= \alpha \cdot 1 + \beta \cdot 2 = \alpha + 2\beta = 1
+\end{align*}
+
+We are gonna replace \(\alpha\) with \(1 - 2\beta\) in the first property and write down all the inequalities and find one pair that satisfies all of them.
+\begin{align*}
+   (1 - 2\beta) p_1(k) + \beta p_2(k) &\geq 0 \\
+   \intertext{for \(k = 1\) or \(k = 3\)}
+   (1 - 2\beta) \left(-\frac{1}{3}\right) + \beta \left(\frac{1}{3}\right) &\geq 0 \\
+   -\frac{1}{3} + \frac{2\beta}{3} + \frac{\beta}{3} &\geq 0 \\
+   -1 + 3\beta &\geq 0 \\
+   \beta &\geq \frac{1}{3} \\
+   \intertext{for \(k = 2\) or \(k = 5\)}
+   (1 - 2\beta) \left(-\frac{1}{6}\right) + \beta \left(\frac{1}{6}\right) &\geq 0 \\
+   -\frac{1}{6} + \frac{2\beta}{6} + \frac{\beta}{6} &\geq 0 \\
+   -1 + 3\beta &\geq 0 \\
+   \beta &\geq \frac{1}{3} \\
+   \intertext{for \(k = 4\) or \(k = 6\)}
+   (1 - 2\beta) (1) + \beta \left(\frac{1}{2}\right) &\geq 0 \\
+   1 - 2\beta + \frac{\beta}{2} &\geq 0 \\
+   2 - 4\beta + \beta &\geq 0 \\
+   2 - 3\beta &\geq 0 \\
+   \beta &\leq \frac{2}{3} \\
+\end{align*}
+
+Choose \(\beta = \frac{1}{2}\) and \(\alpha = 1 - 2\beta = 0\). \\
+So one possible linear combination is:
+\begin{align*}
+   0 \cdot p_1 + \frac{1}{2} \cdot p_2
+\end{align*}
+
+\subsection*{(iii)}
+We need to find \(q \in (0, 1)\) such that \(p_q\) is a probability counting density. \\
+We need to satisfy the two properties:
+\begin{itemize}
+    \item \(p_q(k) = q^k \geq 0\) for all \(k\in \Omega\)
+    \item \(\sum_{k \in \Omega}^{} p_q(k) = \sum_{k \in \mathbb{N}}^{} q^k = 1\)
+\end{itemize}
+
+The first property is satisfied for all \(q \in (0, 1)\) since exponentials with positive bases are always positive. \\
+For the second property we use the formula for infinite geometric series:
+\begin{align*}
+   \sum_{k=1}^{\infty} q^k &= \frac{q}{1 - q} = 1 \\
+   q &= 1 - q \\
+   2q &= 1 \\
+   q &= \frac{1}{2}
+\end{align*}
+
+So the only \(q\) that makes \(p_q\) a probability counting density is \(q = \frac{1}{2}\).
 
 \end{document}
