--- a/math3/hw8/main.tex
+++ b/math3/hw8/main.tex
@@ -41,13 +41,13 @@
 % (ii) an inspected car, that is older than ten years, does not receive a TU¨V sticker?
 % (iii) an inspected car, that has received a TU¨V sticker, is older than ten years?
 
-\section*{Exercise 29}
-
 Let \(N_k\) denote the set of natural numbers from 1 to k.
 \begin{align*}
    N_k = \{i \in \mathbb{N} \; \big| \; 0 < i \leq k\}
 \end{align*}
 So that \(N_k\) has k elements.
+
+\section*{Exercise 29}
 
 \subsection*{(i)}
 The probability space would be
@@ -114,6 +114,87 @@ We want to calculate \(P[\{2 \leq X \leq 5\}]\).
    &= \frac{1}{60} (3 + 5 + 7 + 9) \\
    &= \frac{24}{60} \\
    &= \frac{2}{5}
+\end{align*}
+
+\section*{Exercise 30}
+
+\subsection*{(i)}
+The probability space would be
+\begin{align*}
+   \Omega &= N_7 \times N_4 \\
+   \mathcal{F} &= \text{Power set of } \Omega \\
+   P &= U_\Omega
+\end{align*}
+I chose the uniform distribution because each outcome is equally likely when pulling marbles from urns. \\
+The random variables \(D_7\) and \(D_4\) would be
+\begin{align*}
+   D_7: \Omega &\to \mathbb{N} \\
+   (m_7, m_4) &\mapsto m_7
+\end{align*}
+\begin{align*}
+   D_4: \Omega &\to \mathbb{N} \\
+   (m_7, m_4) &\mapsto m_4
+\end{align*}
+The ranges of \(D_7\) and \(D_4\)
+\begin{align*}
+   D_7(\Omega) &= \{m_7 \; | \; m_7 \in N_7, m_4 \in N_4\} = N_7
+\end{align*}
+\begin{align*}
+   D_4(\Omega) &= \{m_4 \; | \; m_7 \in N_7, m_4 \in N_4\} = N_4
+\end{align*}
+
+\subsection*{(ii)}
+The range of \(X\)
+\begin{align*}
+   X(\Omega) &= \{\max(|D_7 - D_4|, 0) \; | \; D_7 \in N_7, D_4 \in N_4\} \\
+   &= N_6 \cup \{0\}
+\end{align*}
+
+The range of \(Y\)
+\begin{align*}
+   Y(\Omega) &= \{\min(|D_7 - D_4|, 5) \; | \; D_7 \in N_7, D_4 \in N_4\} \\
+   &= N_5 \cup \{0\}
+\end{align*}
+
+To find the distributions of \(X\) and \(Y\), we need to calculate \(P[\{X = k\}]\) and \(P[\{Y = k\}]\) for \(k\) in their respective ranges. \\
+The random varaible X takes the value \(k\) in the following cases:
+\begin{itemize}
+   \item When \(|D_7 - D_4| = k\)
+\end{itemize}
+The random varaible Y takes the value \(k\) in the following cases:
+\begin{itemize}
+   \item When \(|D_7 - D_4| = k\) for \(k \in N_5\)
+   \item When \(|D_7 - D_4| \geq 5\) for \(k = 5\)
+\end{itemize}
+
+\section*{Exercise 31}
+Lets first create the probability space.
+\begin{align*}
+   \Omega &= \text{set of all light bulbs } = M_1 \uplus M_2 \uplus M_3 \\
+   \mathcal{F} &= \text{Power set of } \Omega \\
+   P &= U_\Omega
+\end{align*}
+where \(M_i\) is the set of all light bulbs from manufacturer \(i\) for \(i \in \{1, 2, 3\}\). \\
+Here \(M_i\) also represent the event that a randomly selected bulb is from manufacturer \(i\). \\
+Let \(D\) be the event that a randomly selected bulb is defective. \\
+We are given that
+\begin{align*}
+   P[M_1] &= 0.3 \\
+   P[M_2] &= 0.5 \\
+   P[M_3] &= 0.2 \\
+   P[D | M_1] &= 0.05 \\
+   P[D | M_2] &= 0.02 \\
+   P[D | M_3] &= 0.08
+\end{align*}
+
+We want to find \(P[D]\). \\
+Using the law of total probability:
+\begin{align*}
+   P[D] &= \sum_{i=1}^{3} P[D | M_i] P[M_i] \\
+   &= P[D | M_1] P[M_1] + P[D | M_2] P[M_2] + P[D | M_3] P[M_3] \\
+   &= 0.05 \cdot 0.3 + 0.02 \cdot 0.5 + 0.08 \cdot 0.2 \\
+   &= 0.015 + 0.01 + 0.016 \\
+   &= 0.041
 \end{align*}
 
 \end{document}
